manifests/site-ingress.yaml
# Source: erpnext/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpnext-upstream-ingress
  namespace: erpnext
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: "%site_name%"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: erpnext-upstream
                port:
                  number: 8080
